2013-04-02  Paul Fitzpatrick  <paul@robotrebuilt.com>

	* src/yarpserver/CMakeLists.txt, conf/YarpSystemCheck.cmake: don't
	link against dl on unix flavors that don't have it
	[thanks Arnaud Degroote]

2013-03-28  Alessandro Scalzo <alessandro.scalzo@iit.it>
    * src/libYARP_OS/include/yarp/os/impl/RunCheckPoints.h
    * src/libYARP_OS/src/RunCheckPoints.cpp
    * src/libYARP_OS/CMakeLists.txt

    Added ENABLE_YARPRUN_LOG option to cmake configuration options.

2013-05-01 Ugo Pattacini <ugo.pattacini@iit.it>
    * GazeControl.h,CartesianControl: method deleteContext() added

2013-03-01 Ugo Pattacini <ugo.pattacini@iit.it>
    * src/libYARP_dev/include/yarp/dev/GazeControl.h: added possibility to block eyes too

2013-02-15  Alessandro Scalzo <alessandro.scalzo@iit.it>
    * src/libYARP_dev/include/yarp/dev/IVirtualAnalogSensor.h

2013-01-25  Paul Fitzpatrick  <paul@robotrebuilt.com>

	* src/libYARP_OS/src/ResourceFinder.cpp: add ~/.yarp/POLICY.ini to
	ResourceFinder's default policy search path, when POLICY
	environment flag not set.

2013-01-22  Paul Fitzpatrick  <paul@robotrebuilt.com>

	* src/libYARP_OS/src/Companion.cpp, src/carriers/tcpros_carrier/RosType.cpp, src/libYARP_sig/src/SoundFile.cpp, src/modules/urbtc/UrbtcControl.cpp:
	fixes from DonChunior for some resource leaks [thanks Domenic Laritz]

2013-01-11  Daniele E. Domenichelli <daniele.domenichelli@iit.it>
	* conf/YarpOptions.cmake, conf/YarpSystemCheck.cmake: Always
	  enable warnings on linux. Add YARP_ABORT_ON_WARNING and
	  YARP_FATAL_ERRORS options to replace deprecated YARP_ADMIN
	  environment variable
	* CMakeLists.txt, conf/YarpAceCheck.cmake,
	  conf/YarpSystemCheck.cmake: Split YarpSystemCheck and.
	  YarpAceCheck. This will allow to move find_package(ACE) in
	  YarpFindDependencies later.
	* CMakeLists.txt: Run system checks before checking options.
	* conf/YarpOptions.cmake: Kill COMPILING_ALL_YARP defunct
	  option.
	* conf/YarpOptions.cmake, conf/YarpSystemCheck.cmake: Add