@@ -335,15 +335,6 @@ else(WIN32)
 
 endif(WIN32)
 
-if (UNIX)
-  # On *BSD and perhaps other flavors of unix, functions like dlopen,
-  # dlclose etc are included in libc.  On Linux and other flavors,
-  # they are placed in a separate libdl library.  We check for that
-  # library here.
-  include(CheckLibraryExists)
-  check_library_exists(dl dlopen "Check for dl library" YARP_HAS_LIBDL)
-endif ()
-
 # Translate the names of some YARP options, for yarp_config_options.h.in
 # and YARPConfig.cmake.in
 set (YARP_HAS_MATH_LIB ${CREATE_LIB_MATH})
