@@ -19,9 +19,7 @@ if (YARP_USE_PERSISTENT_NAMESERVER)
   target_link_libraries(YARP_serversql ${SQLite_LIBRARIES})
   if (UNIX)
     set_target_properties(YARP_serversql PROPERTIES COMPILE_FLAGS -fPIC)
-    if (YARP_HAS_LIBDL)
-      target_link_libraries(YARP_serversql dl)
-    endif ()
+    target_link_libraries(YARP_serversql ${CMAKE_DL_LIBS})
   endif ()
 
   # preserve yarpserver3 executable for a while
